<resources>
    <string name="app_name">iBlood</string>
    <string name="tipo_a">Tipo A</string>
    <string name="tipo_b">Tipo B</string>
    <string name="tipo_ab">Tipo AB</string>
    <string name="tipo_o">Tipo O</string>
    <string name="bem_vindo">Bem vindo ao iBlood!</string>
    <string name="descricao">O iBlood é um aplicativo desenvolvido por alunos do IFTM, com intuito de trazer informações aos usuários sobre seu tipo sanguíneo, com base no livro “A Dieta do Tipo Sanguíneo”.\nSelecione um tipo sanguíneo:</string>
    <string name="sobre">Sobre</string>
    <string name="livro">Livro.pdf</string>
    <string name="descricao_doe">A doação de sangue é um gesto solidário de doar uma pequena quantidade do próprio sangue para salvar a vida de pessoas que se submetem a tratamentos e intervenções médicas de grande porte e complexidade, como transfusões, transplantes, procedimentos oncológicos e cirurgias.</string>
    <string name="procure">O iBlood te mostra quais são os Hospitais ou Bancos de Sangue mais próximos a você! Procure um deles e veja se está apto a doar!</string>
    <string name="sobre_desc1">"   Todas as informações disponibilizadas aqui foram baseadas no Livro: “Peter J.D’Adamo com Catherine Whitney, A Dieta do Tipo Sanguíneo: saúde, vida longa e peso ideal de acordo com seu tipo de sangue. Nova ed. Totalmente ver. e atualizada. Rio de Janeiro: Elsevier, 2005.” – Tradução de: Type blood diet ISBN 978–85–352–8235–1. "</string>
    <string name="sobre_desc0">iBlood</string>
    <string name="sobre_desc2">"   ADVERTÊNCIA: Este aplicativo não pretende substituir as recomendações dos médicos ou outras providências relacionadas à saúde. Ao contrário, seu objetivo é dar informações que ajude o usuário a cooperar com os médicos e profissionais da saúde em busca mútua por um estado ótimo de bem-estar."</string>
    <string name="sobre_desc3">"   O iBlood foi desenvolvido pelo aluno do curso de Engenharia de Computação no IFTM.\n\n- João Pedro Vieira Campos     (6*Período)"</string>
    <string name="title_activity_localizacoes">Map</string>
    <string name="desc_sobre2">ADVERTÊNCIA: Este aplicativo não pretende substituir as recomendações dos médicos ou outras providências relacionadas à saúde. Ao contrário, seu objetivo é dar informações que ajude o usuário a cooperar com os médicos e profissionais da saúde em busca mútua por um estado ótimo de bem-estar.      Os alimentos aqui listados e recomendados não devem ser utilizados para total substituição de sua alimentação diária. Estes são expostos como exemplos de alimentos que se encaixam em cada perfil sanguíneo, conforme o livro “A Dieta do Tipo Sanguíneo, de Peter J.D’Adamo com Catherine Whitney”. Para maiores detalhes e uma alimentação adequada, consulte seu Médico ou Nutricionista.       Os exemplos de dieta apresentados foram montados por uma aluna concluinte do curso de Nutrição na faculdade UFTM campus Uberaba CE, sob a supervisão de sua Orientada de projetos. Todas as informações foram baseadas no livro “A Dieta do Tipo Sanguíneo, de Peter J.D’Adamo com Catherine Whitney”.</string>
</resources>
